[package]
name = "proxies"
version = "0.1.0"
authors = ["Jiong Du <jiongdu0.0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
futures = "0.3"
tokio = {version="1.3", features=["io-util", "net", "rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
async-trait = "0.1"
bytes = "1.0"
pin-project-lite = "0.2"
url = "2.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.8"