[package]
name = "proxies"
version = "0.2.0"
authors = ["Jiong Du <jiongdu0.0@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rustlib/proxies"
description = "http/socks5 proxy"
documentation = "https://docs.rs/proxies"
repository = "https://github.com/rustlib/proxies"
readme = "README.md"
keywords = ["proxy", "socks5"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.3", features = ["io-util", "net", "rt", "macros"] }
tokio-stream = "0.1"
async-trait = "0.1"
bytes = "1.0"
pin-project-lite = "0.2"
url = "2.2"
tracing = "0.1"
serde = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3.10"
